@@ -2548,9 +2548,8 @@ class EbuildBuild(CompositeTask):
 		tree = "porttree"
 		self._tree = tree
 		portdb = root_config.trees[tree].dbapi
-		settings["EMERGE_FROM"] = pkg.type_name
-		settings.backup_changes("EMERGE_FROM")
-		settings.reset()
+		settings.setcpv(pkg)
+		settings.configdict["pkg"]["EMERGE_FROM"] = pkg.type_name
 		ebuild_path = portdb.findname(self.pkg.cpv)
 		self._ebuild_path = ebuild_path
 
@@ -3233,6 +3232,7 @@ class Binpkg(CompositeTask):
 		debug = settings.get("PORTAGE_DEBUG") == "1"
 		portage.doebuild_environment(self._ebuild_path, "setup",
 			settings["ROOT"], settings, debug, 1, self._bintree.dbapi)
+		settings.configdict["pkg"]["EMERGE_FROM"] = pkg.type_name
 
 		# The prefetcher has already completed or it
 		# could be running now. If it's running now,
@@ -3775,6 +3775,15 @@ class MergeListItem(CompositeTask):
 			colorize("MERGE_LIST_PROGRESS", str(pkg_count.curval)),
 			colorize("MERGE_LIST_PROGRESS", str(pkg_count.maxval)),
 			colorize("GOOD", pkg.cpv))
+
+		portdb = pkg.root_config.trees["porttree"].dbapi
+		portdir_repo_name = portdb._repository_map.get(portdb.porttree_root)
+		if portdir_repo_name:
+			pkg_repo_name = pkg.metadata.get("repository")
+			if pkg_repo_name != portdir_repo_name:
+				if not pkg_repo_name:
+					pkg_repo_name = "unknown repo"
+				msg += " from %s" % pkg_repo_name
 
 		if pkg.root != "/":
 			msg += " %s %s" % (preposition, pkg.root)
