@@ -918,7 +918,7 @@ class config(object):
 	_env_blacklist = [
 		"A", "AA", "CATEGORY", "EBUILD_PHASE", "EMERGE_FROM",
 		"PF", "PKGUSE", "PORTAGE_CONFIGROOT", "PORTAGE_IUSE",
-		"PORTAGE_USE", "ROOT", "EPREFIX", "EROOT"
+		"PORTAGE_REPO_NAME", "PORTAGE_USE", "ROOT", "EPREFIX", "EROOT"
 	]
 
 	_environ_whitelist = []
@@ -1936,8 +1936,12 @@ class config(object):
 			else:
 				aux_keys = [k for k in auxdbkeys \
 					if not k.startswith("UNUSED_")]
+				aux_keys.append("repository")
 				for k, v in izip(aux_keys, mydb.aux_get(self.mycpv, aux_keys)):
 					pkg_configdict[k] = v
+			repository = pkg_configdict.pop("repository", None)
+			if repository is not None:
+				pkg_configdict["PORTAGE_REPO_NAME"] = repository
 			for k in pkg_configdict:
 				if k != "USE":
 					env_configdict.pop(k, None)
@@ -2545,8 +2549,9 @@ class config(object):
 
 					if x[0]=="+":
 						# Not legal. People assume too much. Complain.
-						writemsg(red("USE flags should not start with a '+': %s\n" % x),
-							noiselevel=-1)
+						writemsg(colorize("BAD",
+							"USE flags should not start with a '+': %s" % x) \
+							+ "\n", noiselevel=-1)
 						x=x[1:]
 						if not x:
 							continue
@@ -3442,7 +3447,8 @@ def fetch(myuris, mysettings, listonly=0, fetchonly=0, locks_in_subdir=".locks",
 
 	if not os.access(mysettings["DISTDIR"],os.W_OK) and fetch_to_ro:
 		if use_locks:
-			writemsg(red("!!! For fetching to a read-only filesystem, " + \
+			writemsg(colorize("BAD",
+				"!!! For fetching to a read-only filesystem, " + \
 				"locking should be turned off.\n"), noiselevel=-1)
 			writemsg("!!! This can be done by adding -distlocks to " + \
 				"FEATURES in /etc/make.conf\n", noiselevel=-1)
@@ -4805,17 +4811,6 @@ def doebuild_environment(myebuild, mydo, myroot, mysettings, debug, use_cache, m
 	mysettings["ROOT"]     = myroot
 	mysettings["EROOT"]    = myroot + mysettings["EPREFIX"].lstrip(os.path.sep) + os.path.sep
 	mysettings["STARTDIR"] = getcwd()
-
-	mysettings["PORTAGE_REPO_NAME"] = ""
-	# bindbapi has no getRepositories() method
-	if mydbapi and hasattr(mydbapi, "getRepositories"):
-		# do we have a origin repository name for the current package
-		repopath = os.sep.join(pkg_dir.split(os.path.sep)[:-2])
-		for reponame in mydbapi.getRepositories():
-			if mydbapi.getRepositoryPath(reponame) == repopath:
-				mysettings["PORTAGE_REPO_NAME"] = reponame
-				break
-
 	mysettings["EBUILD"]   = ebuild_path
 	mysettings["O"]        = pkg_dir
 	mysettings.configdict["pkg"]["CATEGORY"] = cat
@@ -7299,16 +7294,16 @@ def deprecated_profile_check(settings=None):
 	deprecatedfile = open(deprecated_profile_file, "r")
 	dcontent = deprecatedfile.readlines()
 	deprecatedfile.close()
-	writemsg(red("\n!!! Your current profile is deprecated and not supported anymore.\n"),
-		noiselevel=-1)
+	writemsg(colorize("BAD", "\n!!! Your current profile is " + \
+		"deprecated and not supported anymore.") + "\n", noiselevel=-1)
 	if not dcontent:
-		writemsg(red("!!! Please refer to the Gentoo Upgrading Guide.\n"),
-			noiselevel=-1)
+		writemsg(colorize("BAD","!!! Please refer to the " + \
+			"Gentoo Upgrading Guide.") + "\n", noiselevel=-1)
 		return True
 	newprofile = dcontent[0]
-	writemsg(red("!!! Please upgrade to the following profile if possible:\n"),
-		noiselevel=-1)
-	writemsg(8*" "+green(newprofile)+"\n", noiselevel=-1)
+	writemsg(colorize("BAD", "!!! Please upgrade to the " + \
+		"following profile if possible:") + "\n", noiselevel=-1)
+	writemsg(8*" " + colorize("GOOD", newprofile) + "\n", noiselevel=-1)
 	if len(dcontent) > 1:
 		writemsg("To upgrade do the following steps:\n", noiselevel=-1)
 		for myline in dcontent[1:]:
@@ -7388,7 +7383,8 @@ def _global_updates(trees, prev_mtimes):
 		timestamps = {}
 		for mykey, mystat, mycontent in update_data:
 			writemsg_stdout("\n\n")
-			writemsg_stdout(green("Performing Global Updates: ")+bold(mykey)+"\n")
+			writemsg_stdout(colorize("GOOD",
+				"Performing Global Updates: ")+bold(mykey)+"\n")
 			writemsg_stdout("(Could take a couple of minutes if you have a lot of binary packages.)\n")
 			writemsg_stdout("  " + bold(".") + "='update pass'  " + \
 				bold("*") + "='binary update'  " + bold("#") + \
